<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_student"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_above="@+id/ll_bottom"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="@color/colorLightGrayBg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.3"
                    android:gravity="center|left"
                    android:paddingRight="10dp"
                    android:text="@string/subject_name"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_subject_name"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.3"
                    android:gravity="center|left"
                    android:paddingRight="10dp"
                    android:text="@string/subject_abbreviation"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_subject_code"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sp_class"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.3"
                    android:gravity="center|left"
                    android:paddingRight="10dp"
                    android:text="@string/classstr"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="14sp" />

                <Spinner
                    android:gravity="center|right"
                    android:layout_marginRight="1dp"
                    android:id="@+id/sp_class"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner_bg"
                    android:layout_weight="0.7"
                    />
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Add Subjects"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@color/colorViewAllBG"
            android:paddingRight="5dp"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-smallcaps"
            android:text="View All"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Cancel"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_border"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Save"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_border"
            />
    </LinearLayout>

</RelativeLayout>
